# lint

./: .gitignore  Cargo.toml  README.md  Trunk.toml  flake.nix  index.html  input.css  justfile  style.css  tailwind.config.js
.cargo/: config.toml
src/: components.rs  main.rs  schema.rs  storage.rs
style/: output.css
