[package]
name = "lint"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
hex = "*"
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos-use = { version = "*", features = ["serde"] } 
maplit = "*"
rand = "*"
reqwasm = "0.5.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sha2 = "*"
web-sys = { version = "*", features = ["Storage"] }
